Fix bad behavior / running OOM on Windows

When testing KDevelop on Windows we sometimes experienced excessive use
of memory (> 2 gigs of RAM allocated). This patch appears to fix the
issue.

Compiler warnings didn't sound promising either:
Z:\kderoot\download\git\kcompletion\src\kzoneallocator.cpp(129):
warning C4319: '~': zero extending 'unsigned long' to 'quintptr' of greater size
Z:\kderoot\download\git\kcompletion\src\kzoneallocator.cpp(206):
warning C4319: '~': zero extending 'unsigned long' to 'quintptr' of greater size
Z:\kderoot\download\git\kcompletion\src\kzoneallocator.cpp(256):
warning C4267: '+=': conversion from 'size_t' to 'unsigned long', possible loss of data

BUG: 345860
REVIEW: 124896